...
                )
                Spacer()
                HStack{
                    Spacer()
                    MiniButton(title: "Reset", action: resetPlant)
                    Spacer()
                    MiniButton(title: "Save", action: savePlant)
                    Spacer()
                }
                .frame(width: 0.9 * UIScreen.main.bounds.width)
            }
        }
        
...
