...
                    .padding(20)
                    .onChange(of: roomName) {
                        let found = RoomModel.getRoom(name: roomName, fromRooms: roomList)
                        nameExists = found != nil
                        savingEmpty = roomName == ""
                    }
                    .accessibilityIdentifier("nameField")
                if(nameExists) {
                    Text("A room with such a name already exists, choose a different name!")
                        .padding(.horizontal, 30)
                        .font(.note)
                        .foregroundColor(Color.red)
                }
...
                }
                .frame(width: 230, height: 230)
                
                Spacer()
                LargeButton(title: "Save room", action: saveRoom)
                    .padding(20)
                    .accessibilityIdentifier("saveRoomButton")
            }
        }
        .navigationBarBackButtonHidden(true)
        .customToolbar(title: "Add new room", presentationMode: presentationMode)
    }
    
...
